--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ sub { bottom: -.25em; }
 
 .cf:after { clear: both; }
 
-.cf { *zoom: 1; }
+.cf { zoom: 1; }
 
 /* 1.3. Font class declaration
    ========================================================================== */
@@ -155,3 +155,167 @@ sub { bottom: -.25em; }
   font-style: normal;
   font-weight: bold;
 }
+
+/*for all*/
+body {
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style-type: none;
+}
+
+/*for wrapper*/
+.wrapper {
+  width: 86.50%;
+  max-width: 1175px;
+  margin: 0 auto;
+}
+
+/*=================================
+  Header-Top styling starts here
+=================================*/
+
+.header-top {
+  background-color: #222834;
+  padding: 14px 0;
+  font-size: 12px;
+}
+
+.header-top .wrapper {
+  width: 86%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-top-contact > a{
+  margin-right: 10px;
+}
+
+.icon {
+  color: #D8DAE2;
+  text-indent: -9999px;
+}
+
+.mail-icon::before {
+  content: "\f0e0";
+  font-family: "FontAwesome";
+  color: #D8DAE2;
+  margin-right: 10px;
+}
+
+.phone-icon::before {
+  content: "\f879";
+  font-family: "FontAwesome";
+  color: #fff;
+  margin-right: 10px;
+}
+
+.header-top-media {
+  display: flex;
+}
+
+.facebook::before {
+  content: "\f39e";
+  font-family: "FontAwesome";
+  color: #fff;
+  margin-right: 10px;
+}
+
+.instagram::before {
+  content: "\f16d";
+  font-family: "FontAwesome";
+  color: #fff;
+  margin-right: 10px;
+}
+
+.twitter::before {
+  content: "\f099";
+  font-family: "FontAwesome";
+  color: #fff;
+  margin-right: 10px;
+}
+
+.linked-in::before {
+  content: "\f08c";
+  font-family: "FontAwesome";
+  color: #fff;
+  margin-right: 10px;
+}
+
+
+/*=================================
+  Header-bottom styling starts here
+=================================*/
+
+.header-bottom {
+  padding: 20px 0;
+}
+
+.header-bottom .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-nav-links {
+  display: flex;
+}
+
+.header-nav-links > li {
+  margin-right: 100px;
+  font-size: 20px;
+}
+
+.header-nav-links li:last-child {
+  margin-right: 0;
+}
+
+.main-header-icons {
+  display: flex;
+}
+
+.search-icon::before {
+  content: "\f002";
+  font-family: "FontAwesome";
+  color: #1C2320;
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+.cart-icon::before {
+  content: "\f218";
+  font-family: "FontAwesome";
+  color: #1C2320;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.profile-icon::before {
+  content: "\f007";
+  font-family: "FontAwesome";
+  color: #1C2320;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.search-icon {
+  border: none;
+  background: none;
+}
+
+.search-form input {
+  display: none;
+}
+
+.logo a{
+  color: #57B26E;
+  font-size: 50px;
+  font-weight: 600;
+}
+
