--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,3 +319,6 @@ li {
   font-weight: 600;
 }
 
+/*=================================
+  banner styling starts here
+=================================*/
