--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,13 +62,87 @@
    v2.0 | 20110126
    License: none (public domain)
    ========================================================================== */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
-blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
-ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,
-dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure,
-figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -78,17 +152,30 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
 /* Force scrollbar */
-html { overflow-y: scroll; }
+html {
+  overflow-y: scroll;
+}
 
 /* Align radios and text inputs with their label */
 
-input[type='radio'] { vertical-align: text-bottom; }
+input[type='radio'] {
+  vertical-align: text-bottom;
+}
 
 /* Hand cursor on clickable input elements */
 label,
@@ -104,7 +191,9 @@ strong {
   font-size: inherit;
 }
 
-em { font-style: italic; }
+em {
+  font-style: italic;
+}
 
 img {
   border: 0;
@@ -119,9 +208,13 @@ sup {
   line-height: 0;
 }
 
-sup { top: -.7em; }
+sup {
+  top: -.7em;
+}
 
-sub { bottom: -.25em; }
+sub {
+  bottom: -.25em;
+}
 
 /* 1.2. Clear Fix
    ========================================================================== */
@@ -132,9 +225,13 @@ sub { bottom: -.25em; }
   content: " ";
 }
 
-.cf:after { clear: both; }
+.cf:after {
+  clear: both;
+}
 
-.cf { zoom: 1; }
+.cf {
+  zoom: 1;
+}
 
 /* 1.3. Font class declaration
    ========================================================================== */
@@ -168,6 +265,7 @@ a {
 
 li {
   list-style-type: none;
+  display: inline-block;
 }
 
 .text-hide {
@@ -197,13 +295,12 @@ li {
   justify-content: space-between;
 }
 
-.header-top-contact > a{
+.header-top-contact>a {
   margin-right: 10px;
 }
 
 .icon {
   color: #D8DAE2;
-  text-indent: -9999px;
 }
 
 .mail-icon::before {
@@ -274,7 +371,7 @@ li {
   display: flex;
 }
 
-.header-nav-links > li {
+.header-nav-links>li {
   margin-right: 100px;
   font-size: 20px;
 }
@@ -324,10 +421,40 @@ li {
   display: none;
 }
 
-.logo a{
+.logo a {
   color: #57B26E;
   font-size: 50px;
   font-weight: 600;
+}
+
+.cart {
+  position: relative;
+}
+
+.cart-value {
+  position: absolute;  
+  bottom: 15px;
+  right: 27px;
+  background-color: #D8DAE2;
+  border-radius: 50%;
+  width: 20px;
+  padding: 2px;
+  text-align: center;
+}
+
+.profile {
+  position: relative;
+}
+
+.profile-value {
+  position: absolute;
+  bottom: 15px;
+  right: 29px;
+  background-color: #D8DAE2;
+  border-radius: 35%;
+  width: 37px;
+  padding: 3px;
+  text-align: center;
 }
 
 /*=================================
@@ -378,6 +505,7 @@ li {
   color: #4A4A4A;
   margin-bottom: 10px;
 }
+
 .banner-slider h3 {
   font-size: 30px;
   color: #313132;
@@ -415,7 +543,7 @@ li {
   left: 0;
 }
 
-.next{
+.next {
   background: none;
   border: none;
   position: absolute;
@@ -439,7 +567,7 @@ li {
   margin-right: 20px;
 }
 
-.banner-navigation > .active {
+.banner-navigation>.active {
   background-color: #59A96A;
 }
 
@@ -484,13 +612,13 @@ li {
   text-align: center;
 }
 
-.category-top > h2 {
+.category-top>h2 {
   font-size: 50px;
   color: #4A4A4A;
   margin-bottom: 10px;
 }
 
-.category-top > p {
+.category-top>p {
   width: 40%;
   color: #4A4A4A;
   text-align: center;
@@ -527,10 +655,6 @@ li {
   padding: 80px 0;
 }
 
-.product-section .wrapper {
-
-}
-
 .product-top {
   display: flex;
   flex-direction: column;
@@ -563,11 +687,11 @@ li {
 
 .article-bottom {
   background-color: #fff;
-  padding: 10px;
-  width: 330px;
+  padding: 20px 15px;
+  width: 320px;
 }
 
-.article-bottom p{
+.article-bottom p {
   width: 90%;
 }
 
@@ -598,7 +722,7 @@ li {
 }
 
 .article-heading a {
-  color: #222834; 
+  color: #222834;
 }
 
 .article-bottom p {
@@ -610,7 +734,153 @@ li {
   margin: 20px 0 40px;
   color: #C0BEC9;
 }
- 
+
 /*=================================
   product styling ends here
+=================================*/
+
+/*=================================
+  footer styling starts here
+=================================*/
+
+.footer-top {
+  background-color: #222834;
+  padding: 50px 0;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #3c3c3c;
+  margin-bottom: 40px;
+  padding: 20px 0;
+}
+
+.zay-shop {
+  width: 50%;
+  margin-right: 40px;
+}
+
+.zay-shop>h5 {
+  font-size: 25px;
+  border-bottom: 1px solid #3c3c3c;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+.zay-shop>h5 a {
+  color: #57B076;
+}
+
+.address-info a {
+  color: #D8DAE2;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.location-icon::before {
+  content: "\f3c5";
+  font-family: "FontAwesome";
+  color: #D8DAE2;
+  margin-right: 3px;
+}
+
+.location-icon {
+  color: #D8DAE2;
+}
+
+.products-list {
+  width: 50%;
+  margin-right: 40px;
+}
+
+.products-list h5 {
+  font-size: 25px;
+  color: #D8DAE2;
+  border-bottom: 1px solid #3c3c3c;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+.products-list a {
+  color: #D8DAE2;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.further-info {
+  width: 50%;
+}
+
+.further-info h5 {
+  font-size: 25px;
+  color: #D8DAE2;
+  border-bottom: 1px solid #3c3c3c;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+.further-info a {
+  display: block;
+  color: #D8DAE2;
+  margin-bottom: 20px;
+}
+
+.footer-mid {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sub-header-media {
+  display: flex;
+}
+
+.medea-icon-circle {
+  padding: 12px;
+  border: 1px solid #4A4A4A;
+  border-radius: 50%;
+  font-size: 20px;
+}
+
+.sub-header-media li {
+  margin-right: 10px;
+}
+
+.newsletter {
+  display: flex;
+}
+
+.newsletter input {
+  border: 1px solid #353435;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  background: none;
+  padding: 16px;
+  width: 15vw;
+  font-size: 18px;
+}
+
+.newsletter button {
+  background: #5AAC6E;
+  border: none;
+  padding: 3px 18px;
+  border-bottom-right-radius: 3px;
+  border-top-right-radius: 3px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.footer-bottom {
+  background-color: #1F232E;
+  color: #D8DAE2;
+  padding: 30px 0;
+}
+
+.underline {
+  color: #D8DAE2;
+  border-bottom: 1px solid #D8DAE2;
+}
+
+/*=================================
+  footer styling ends here
 =================================*/
