--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,8 +267,34 @@ li {
   list-style-type: none;
 }
 
-.text-hide {
-  display: none;
+.icon {
+  width: 13px;
+  height: 13px;
+  position: relative;
+  color: #D8DAE2;
+  display: block;
+  text-indent: -9999px;
+  margin-right: 15px;
+}
+
+.icon:before {
+  color: #D8DAE2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-indent: 0;
+  display: block;
+  font-family: "FontAwesome";
+}
+
+.icon::after {
+  color: #D8DAE2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-indent: 0;
+  display: block;
+  font-family: "FontAwesome";
 }
 
 /*for wrapper*/
@@ -284,7 +310,7 @@ li {
 
 .header-top {
   background-color: #222834;
-  padding: 17px 0;
+  padding: 13px 0;
   font-size: 13px;
 }
 
@@ -298,7 +324,7 @@ li {
   margin-right: 10px;
 }
 
-.icon {
+.mail-icon {
   color: #D8DAE2;
 }
 
@@ -306,6 +332,10 @@ li {
   content: "\f0e0";
   font-family: "FontAwesome";
   margin-right: 10px;
+}
+
+.phone-icon {
+  color: #D8DAE2;
 }
 
 .phone-icon::before {
@@ -320,26 +350,18 @@ li {
 
 .facebook::before {
   content: "\f39e";
-  font-family: "FontAwesome";
-  margin-right: 10px;
 }
 
 .instagram::before {
   content: "\f16d";
-  font-family: "FontAwesome";
-  margin-right: 10px;
 }
 
 .twitter::before {
   content: "\f099";
-  font-family: "FontAwesome";
-  margin-right: 10px;
 }
 
 .linked-in::before {
   content: "\f08c";
-  font-family: "FontAwesome";
-  margin-right: 10px;
 }
 
 /*=================================
@@ -354,7 +376,7 @@ li {
 }
 
 .header-bottom {
-  padding: 22px 0;
+  padding: 20px 0;
 }
 
 .header-bottom .wrapper {
@@ -373,7 +395,7 @@ li {
 }
 
 .header-nav-links a {
-  color: #4A4A4A;
+  color: #636161;
 }
 
 .header-nav-links li:last-child {
@@ -386,15 +408,12 @@ li {
 
 .search-icon::before {
   content: "\f002";
-  font-family: "FontAwesome";
   color: #1C2320;
-  margin-right: 10px;
   font-size: 20px;
 }
 
 .cart-icon::before {
   content: "\f218";
-  font-family: "FontAwesome";
   color: #1C2320;
   font-size: 20px;
   margin-right: 10px;
@@ -402,13 +421,13 @@ li {
 
 .profile-icon::before {
   content: "\f007";
-  font-family: "FontAwesome";
   color: #1C2320;
   font-size: 20px;
   margin-right: 10px;
 }
 
 .search-icon {
+  margin-right: 30px;
   border: none;
   background: none;
 }
@@ -419,19 +438,20 @@ li {
 
 .logo a {
   color: #57B26E;
-  font-size: 58px;
+  font-size: 54px;
   font-weight: 600;
 }
 
 .cart {
   position: relative;
+  margin-right: 20px;
 }
 
 .cart-value {
   position: absolute;
-  bottom: 15px;
-  right: 27px;
-  background-color: #D8DAE2;
+  bottom: 5px;
+  left: 8px;
+  background-color: #EAEDF5;
   border-radius: 50%;
   width: 20px;
   padding: 2px;
@@ -444,10 +464,9 @@ li {
 
 .profile-value {
   position: absolute;
-  bottom: 15px;
-  right: 29px;
-  background-color: #D8DAE2;
-  border-radius: 35%;
+  bottom: 5px;
+  background-color: #EAEDF5;
+  border-radius: 43%;
   width: 37px;
   padding: 3px;
   text-align: center;
@@ -498,13 +517,13 @@ li {
 
 .banner-slider h2 {
   font-size: 50px;
-  color: #4A4A4A;
+  color: #646363;
   margin-bottom: 10px;
 }
 
 .banner-slider h3 {
   font-size: 30px;
-  color: #313132;
+  color: #555557;
   margin-bottom: 5px;
 }
 
@@ -521,30 +540,28 @@ li {
 
 .previous::before {
   content: "\f104";
-  font-family: "FontAwesome";
   color: #A4CBAC;
-  font-size: 50px;
+  font-size: 70px;
 }
 
 .next::after {
   content: "\f105";
-  font-family: "FontAwesome";
   color: #A4CBAC;
-  font-size: 50px;
+  font-size: 70px;
 }
 
 .previous {
   background: none;
   border: none;
   position: absolute;
-  left: 0;
+  left: 17px;
 }
 
 .next {
   background: none;
   border: none;
   position: absolute;
-  right: 0;
+  right: 30px;
 }
 
 .banner-navigation li {
@@ -552,7 +569,6 @@ li {
   width: 30px;
   height: 4px;
   margin-right: 10px;
-  cursor: pointer;
 }
 
 .banner-navigation {
@@ -596,6 +612,7 @@ li {
 
 .category-bottom img {
   width: 100%;
+  max-height: 289px;
   border-radius: 50%;
   margin-bottom: 20px;
 }
@@ -613,13 +630,13 @@ li {
 
 .category-top>h2 {
   font-size: 50px;
-  color: #4A4A4A;
+  color: #646363;
   margin-bottom: 10px;
 }
 
 .category-top>p {
   width: 50%;
-  color: #4A4A4A;
+  color: #646363;
   text-align: center;
   line-height: 30px;
   font-size: 18px;
@@ -665,13 +682,14 @@ li {
 
 .product-top h2 {
   font-size: 50px;
-  color: #313132;
+  color: #646363;
   margin-bottom: 10px;
   text-align: center;
 }
 
 .product-top p {
   width: 45%;
+  color: #646363;
   text-align: center;
   line-height: 30px;
   font-size: 18px;
@@ -716,7 +734,6 @@ li {
 
 .yellow-star::before {
   content: "\f005";
-  font-family: "FontAwesome";
   color: #EDEB59;
   cursor: pointer;
   margin-right: 3px;
@@ -724,7 +741,6 @@ li {
 
 .gray-star::before {
   content: "\f005";
-  font-family: "FontAwesome";
   color: #BBBDBC;
   cursor: pointer;
   margin-right: 3px;
@@ -733,6 +749,12 @@ li {
 
 .star-ratings {
   display: flex;
+}
+
+.star-ratings li {
+  display: flex;
+  margin-right: 10px;
+  font-size: 18px;
 }
 
 .ratings-price {
@@ -802,7 +824,6 @@ li {
 
 .location-icon::before {
   content: "\f3c5";
-  font-family: "FontAwesome";
   color: #D8DAE2;
   margin-right: 3px;
 }
@@ -861,14 +882,19 @@ li {
 }
 
 .medea-icon-circle {
-  padding: 12px;
-  border: 1px solid #4A4A4A;
+  border: 1px solid rgb(74, 74, 74);
   border-radius: 50%;
   font-size: 20px;
+  padding: 16px 20px 0px 15px;
+  text-align: center;
 }
 
 .sub-header-media li {
   margin-right: 10px;
+}
+
+.sub-header-media li a {
+  margin-right: 0;
 }
 
 .newsletter {
@@ -1033,11 +1059,11 @@ li {
 
   .hamberger-icon {
     display: block;
+    margin-left: 20px;
   }
 
   .hamberger-icon::before {
     content: "\f0c9";
-    font-family: "FontAwesome";
     color: #1C2320;
     margin-right: 10px;
     font-size: 20px;
@@ -1127,7 +1153,7 @@ li {
   }
 
   .medea-icon-circle {
-    padding: 12px;
+    padding: 17px 14px 4px 15px;
     border: 1px solid #4A4A4A;
     border-radius: 50%;
     font-size: 14px;
@@ -1158,7 +1184,7 @@ li {
   }
 
   .active img {
-    width: 80%;
+    width: 70%;
   }
 
   .banner-slider li:first-child {
@@ -1192,13 +1218,13 @@ li {
   .category-bottom {
     flex-direction: column;
   }
-  
+
   .category-bottom li {
-    margin-bottom: 40px; 
+    margin-bottom: 40px;
   }
 
   .category-bottom li:last-child {
-    margin-bottom: 0; 
+    margin-bottom: 0;
   }
 
   .product-top p {
@@ -1274,12 +1300,13 @@ li {
     padding: 15px 20px;
   }
 
-  .footer-bottom p{
+  .footer-bottom p {
     text-align: center;
   }
 
   .medea-icon-circle {
     font-size: 12px;
+    padding: 10px;
   }
 
   .footer-bottom {
@@ -1301,6 +1328,62 @@ li {
   .hamberger-icon::before {
     font-size: 16px;
   }
+
+  .cart-value {
+    width: 12px;
+  }
+
+  .profile-value {
+    width: 24px;
+  }
+
+  .hamberger-icon {
+    margin-left: 12px;
+  }
+
+  .previous::before {
+    font-size: 50px;
+  }
+
+  .next::after {
+    font-size: 50px;
+  }
+
+  .category-bottom img {
+    width: 65%;
+  }
+
+  .banner-section {
+    padding: 60px 0;
+  }
+
+  .banner-slider {
+    margin-bottom: 50px;
+  }
+
+  .categories-section {
+    padding: 60px 0;
+  }
+
+  .category-top {
+    margin-bottom: 50px;
+  }
+
+  .category-bottom {
+    margin-bottom: 10px;
+  }
+
+  .product-section {
+    padding: 60px 0;
+  }
+
+  .product-bottom article:last-child {
+    margin-bottom: 0;
+  }
+
+  .footer-top {
+    padding: 40px 0;
+  }
 }
 
 /*===================================
@@ -1313,16 +1396,29 @@ li {
 =====================================*/
 
 @media only screen and (max-width: 480px) {
+  .header-top-contact {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .search-icon {
+    margin-right: 20px;
+  }
+
+  .cart {
+    margin-right: 15px;
+  }
+
   .logo a {
-    font-size: 48px;
+    font-size: 40px;
   }
 
   .banner-slider h2 {
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .banner-slider h3 {
-    font-size: 18px;
+    font-size: 15px;
   }
 
   .banner-slider p {
@@ -1330,12 +1426,16 @@ li {
     line-height: 20px;
   }
 
+  .banner-navigation li {
+    width: 18px;
+  }
+
   .active img {
-    width: 60%;
+    width: 55%;
   }
 
   .category-top>h2 {
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .category-top>p {
@@ -1353,7 +1453,7 @@ li {
   }
 
   .product-top h2 {
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .product-top p {
@@ -1381,6 +1481,7 @@ li {
 
   .medea-icon-circle {
     font-size: 10px;
+    padding: 8px 6px 7px 10px;
   }
 
   .newsletter input {
@@ -1389,6 +1490,51 @@ li {
 
   .footer-bottom {
     font-size: 12px;
+  }
+
+  .previous::before {
+    font-size: 30px;
+  }
+
+  .next {
+    right: 5px;
+  }
+
+  .next::after {
+    font-size: 30px;
+  }
+
+  .go-shop {
+    font-size: 13px;
+    padding: 8px 10px;
+  }
+
+  .category-bottom figcaption {
+    font-size: 18px;
+  }
+
+  .banner-section {
+    padding: 40px 0;
+  }
+
+  .banner-slider {
+    margin-bottom: 40px;
+  }
+
+  .categories-section {
+    padding: 40px 0;
+  }
+
+  .category-top {
+    margin-bottom: 40px;
+  }
+
+  .product-section {
+    padding: 40px 0;
+  }
+
+  .category-bottom img {
+    width: 55%;
   }
 }
 
