--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,19 +274,10 @@ li {
   color: #D8DAE2;
   display: block;
   text-indent: -9999px;
-  margin-right: 15px;
+  /* margin-right: 15px; */
 }
 
-.icon:before {
-  color: #D8DAE2;
-  position: absolute;
-  top: 0;
-  left: 0;
-  text-indent: 0;
-  display: block;
-  font-family: "FontAwesome";
-}
-
+.icon:before,
 .icon::after {
   color: #D8DAE2;
   position: absolute;
@@ -315,13 +306,16 @@ li {
 }
 
 .header-top .wrapper {
-  width: 86%;
   display: flex;
   justify-content: space-between;
 }
 
-.header-top-contact>a {
+.header-top-contact>a:not(:last-child) {
   margin-right: 10px;
+}
+
+.header-top-media>li:not(:last-child) {
+  margin-right: 15px;
 }
 
 .mail-icon {
@@ -385,55 +379,63 @@ li {
   align-items: center;
 }
 
-.header-nav-links {
+.header-nav {
   display: flex;
+  flex-basis: 50%;
+  justify-content: center;
 }
 
-.header-nav-links>li {
-  margin-right: 110px;
-  font-size: 20px;
+.header-nav-links {
+  display: flex;
+  justify-content: space-between;
+  flex-basis: 100%;
 }
 
 .header-nav-links a {
-  color: #636161;
-}
-
-.header-nav-links li:last-child {
-  margin-right: 0;
+  color: #746f6f;
+  font-size: 19px;
 }
 
 .main-header-icons {
   display: flex;
 }
 
+.main-header-icons li {
+  width: 18px;
+  height: 18px;
+}
+
+.main-header-icons li:not(:last-child) {
+  margin-right: 30px;
+}
+
 .search-icon::before {
   content: "\f002";
   color: #1C2320;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .cart-icon::before {
   content: "\f218";
   color: #1C2320;
-  font-size: 20px;
-  margin-right: 10px;
+  font-size: 18px;
 }
 
 .profile-icon::before {
   content: "\f007";
   color: #1C2320;
-  font-size: 20px;
-  margin-right: 10px;
+  font-size: 18px;
 }
 
 .search-icon {
-  margin-right: 30px;
+  display: block;
   border: none;
   background: none;
 }
 
-.search-form input {
+.search-form {
   display: none;
+  margin-top: 20px;
 }
 
 .logo a {
@@ -444,7 +446,6 @@ li {
 
 .cart {
   position: relative;
-  margin-right: 20px;
 }
 
 .cart-value {
@@ -497,6 +498,9 @@ li {
 .previous-next-btn {
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  left: 1%;
+  right: 0;
 }
 
 .banner-slider {
@@ -551,17 +555,19 @@ li {
 }
 
 .previous {
+  display: inline-block;
   background: none;
   border: none;
-  position: absolute;
-  left: 17px;
+  width: 56px;
+  height: 67px;
 }
 
 .next {
+  display: inline-block;
   background: none;
   border: none;
-  position: absolute;
-  right: 30px;
+  width: 56px;
+  height: 67px;
 }
 
 .banner-navigation li {
@@ -597,8 +603,22 @@ li {
   padding: 100px 0;
 }
 
+.categories-section {
+  text-align: center;
+}
+
+.categories-section h3 {
+  color: #646363;
+  font-size: 50px;
+}
+
+.categories-section p {
+  color: #4A4A4A;
+  line-height: 30px;
+  font-size: 18px;
+}
 .categories-section .wrapper {
-  width: 78%;
+  width: 80%;
   display: flex;
   flex-direction: column;
 }
@@ -617,29 +637,8 @@ li {
   margin-bottom: 20px;
 }
 
-.category-top {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 100px;
-}
-
 .category-bottom li {
   text-align: center;
-}
-
-.category-top>h2 {
-  font-size: 50px;
-  color: #646363;
-  margin-bottom: 10px;
-}
-
-.category-top>p {
-  width: 50%;
-  color: #646363;
-  text-align: center;
-  line-height: 30px;
-  font-size: 18px;
 }
 
 .go-shop {
@@ -670,29 +669,6 @@ li {
 .product-section {
   background-color: #E9EEF4;
   padding: 80px 0;
-}
-
-.product-top {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 50px;
-}
-
-.product-top h2 {
-  font-size: 50px;
-  color: #646363;
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.product-top p {
-  width: 45%;
-  color: #646363;
-  text-align: center;
-  line-height: 30px;
-  font-size: 18px;
 }
 
 .product-bottom {
@@ -946,7 +922,19 @@ li {
 
   /* header hover effects */
 
-  .icon:hover {
+  .icon:hover,
+  .header-top a:hover,
+  .header-top a:hover::before,
+  .header-nav-links a:hover,
+  .search-icon:hover::before,
+  .cart-icon:hover::before,
+  .profile-icon:hover::before,
+  .reviews:hover,
+  .location-icon:hover::before,
+  .address-info a:hover,
+  .further-info a:hover,
+  .products-list a:hover,
+  .underline:hover {
     color: #57B076;
   }
 
@@ -962,20 +950,8 @@ li {
     transform: scaleX(1);
   }
 
-  .header-nav-links a:hover {
-    color: #57B076;
-  }
-
-  .search-icon:hover::before {
-    color: #57B076;
-  }
-
-  .cart-icon:hover::before {
-    color: #57B076;
-  }
-
-  .profile-icon:hover::before {
-    color: #57B076;
+  .search-icon:hover+.search-form {
+    display: block;
   }
 
   .previous {
@@ -1010,30 +986,6 @@ li {
     color: #57B076;
   }
 
-  .reviews:hover {
-    color: #57B076;
-  }
-
-  .location-icon:hover::before {
-    color: #57B076;
-  }
-
-  .address-info a:hover {
-    color: #57B076;
-  }
-
-  .products-list a:hover {
-    color: #57B076;
-  }
-
-  .further-info a:hover {
-    color: #57B076;
-  }
-
-  .underline:hover {
-    color: #57B076;
-  }
-
   .newsletter button:hover {
     background-color: #FFF;
     color: #57B076;
@@ -1049,9 +1001,6 @@ li {
 =====================================*/
 
 @media only screen and (max-width: 1003px) {
-  .header-nav-links>li {
-    margin-right: 50px;
-  }
 
   .header-nav-links {
     display: none;
@@ -1081,24 +1030,8 @@ li {
     font-size: 16px;
   }
 
-  .category-top>h2 {
-    font-size: 40px;
-  }
-
-  .category-top>p {
-    font-size: 16px;
-  }
-
   .category-bottom img {
     width: 80%;
-  }
-
-  .product-top h2 {
-    font-size: 40px;
-  }
-
-  .product-top p {
-    font-size: 16px;
   }
 
   .article-heading {
@@ -1207,14 +1140,6 @@ li {
     max-width: 60vw;
   }
 
-  .category-top>h2 {
-    text-align: center;
-  }
-
-  .category-top>p {
-    font-size: 14px;
-  }
-
   .category-bottom {
     flex-direction: column;
   }
@@ -1225,10 +1150,6 @@ li {
 
   .category-bottom li:last-child {
     margin-bottom: 0;
-  }
-
-  .product-top p {
-    font-size: 14px;
   }
 
   .product-bottom {
@@ -1365,10 +1286,6 @@ li {
     padding: 60px 0;
   }
 
-  .category-top {
-    margin-bottom: 50px;
-  }
-
   .category-bottom {
     margin-bottom: 10px;
   }
@@ -1434,36 +1351,8 @@ li {
     width: 55%;
   }
 
-  .category-top>h2 {
-    font-size: 25px;
-  }
-
-  .category-top>p {
-    width: 100%;
-    font-size: 12px;
-    line-height: 20px;
-  }
-
-  .category-top {
-    margin-bottom: 50px;
-  }
-
   .categories-section {
     padding: 50px 0;
-  }
-
-  .product-top h2 {
-    font-size: 25px;
-  }
-
-  .product-top p {
-    width: 100%;
-    font-size: 12px;
-    line-height: 20px;
-  }
-
-  .product-top {
-    margin-bottom: 30px;
   }
 
   .article-heading {
@@ -1523,10 +1412,6 @@ li {
 
   .categories-section {
     padding: 40px 0;
-  }
-
-  .category-top {
-    margin-bottom: 40px;
   }
 
   .product-section {
