--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -616,6 +616,9 @@ li {
   color: #4A4A4A;
   line-height: 30px;
   font-size: 18px;
+  text-align: center;
+  margin-top: 10px;
+  width: 50%;
 }
 .categories-section .wrapper {
   width: 80%;
@@ -623,11 +626,17 @@ li {
   flex-direction: column;
 }
 
+.categories-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .category-bottom {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .category-bottom img {
@@ -646,6 +655,7 @@ li {
   padding: 14px 20px;
   background-color: #5AAC6E;
   border-radius: 4px;
+  display: inline-block;
 }
 
 .category-bottom figure {
@@ -671,9 +681,31 @@ li {
   padding: 80px 0;
 }
 
+.product-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.product-section h3 {
+  color: #646363;
+  font-size: 50px;
+  text-align: center;
+}
+
+.product-section p {
+  color: #4A4A4A;
+  line-height: 30px;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 10px;
+  width: 60%;
+}
+
 .product-bottom {
   display: flex;
   justify-content: space-between;
+  margin-top: 50px;
 }
 
 .articles {
@@ -780,14 +812,14 @@ li {
   margin-right: 40px;
 }
 
-.zay-shop>h5 {
+.zay-shop>h4 {
   font-size: 30px;
   border-bottom: 1px solid #3c3c3c;
   padding-bottom: 20px;
   margin-bottom: 20px;
 }
 
-.zay-shop>h5 a {
+.zay-shop>h4 a {
   color: #57B076;
 }
 
@@ -1046,7 +1078,7 @@ li {
     font-size: 18px;
   }
 
-  .zay-shop>h5 {
+  .zay-shop>h4 {
     font-size: 25px;
   }
 
@@ -1180,7 +1212,7 @@ li {
     text-align: center;
   }
 
-  .zay-shop>h5 {
+  .zay-shop>h4 {
     text-align: center;
   }
 
